--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
 
   <body style="color: rgb(255, 255, 255); background-color: rgb(0, 51, 0); background-image: url(wren-face.jpg);" alink="#00ff40" link="#ffff00" vlink="#80ff80"> &nbsp; <br>
     &nbsp;
-    <p></p><div style="text-align: left;"><font size="+3"><img style="width: 100px; height: 100px; float: left;" alt="" src="bird3c.gif"></font><big><strong style="font-weight: bold;"><span style="font-weight: normal;"><font size="+3"><big> &nbsp; <span style="color: black;">A <span style="color: rgb(10, 240, 80);">Prairie Garden on the Isthmus* Bike Path</span></span></big></font></span></strong></big></div><p> </p>
-    <p></p><div style="text-align: left;"><font size="+3"><br>&nbsp;&nbsp;&nbsp;&nbsp;<a href="location01.htm">Description and Location</a> <a href="https://goo.gl/maps/eweVNijQn5N53SZh6" target="_blank">(map)</a></font></div>
-    
-    <p><font size="+3">&nbsp;&nbsp;&nbsp;&nbsp;<span style="text-decoration: underline;"></span><a href="List01.htm">Species List</a></font> <br>
+    <p></p><div style="text-align: left;"><font size="+3"><img style="width: 100px; height: 100px; float: left;" alt="" src="bird3c.gif"></font><big><strong style="font-weight: bold;"><span style="font-weight: normal;"><font size="+3"><big> &nbsp; <span style="color: rgb(10, 240, 80);">A Prairie Garden on the Isthmus* Bike Path</span></big></font></span></strong></big></div><p> </p>
+    <font size="+3">&nbsp;&nbsp;&nbsp;&nbsp;</font><font size="+3"><a href="location01.htm">Description and Location</a> <a href="https://goo.gl/maps/eweVNijQn5N53SZh6" target="_blank">(map)</a></font><font size="+3"><span style="text-decoration: underline;"></span><a href="List01.htm"></a></font><p>&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; <font size="+3"><a href="List01.htm">Species List</a></font>&nbsp; &nbsp; <br>
       &nbsp;&nbsp;<br>
       &nbsp; &nbsp;&nbsp;&nbsp; &nbsp;<font size="+3"> <a href="index2.htm">Photo Galleries</a></font> </p>
     <p><font size="+3">&nbsp;&nbsp;&nbsp; <a href="donate01.htm">Contributions</a></font> </p>
